New Crowdin updates (#591)
* New translations full_description.txt (Portuguese)

* New translations en.json (Romanian)

* New translations en.json (French)

* New translations en.json (Spanish)

* New translations en.json (Afrikaans)

* New translations en.json (Arabic)

* New translations en.json (Bulgarian)

* New translations en.json (Catalan)

* New translations en.json (Czech)

* New translations en.json (Danish)

* New translations en.json (German)

* New translations en.json (Greek)

* New translations en.json (Basque)

* New translations en.json (Finnish)

* New translations en.json (Hebrew)

* New translations en.json (Hungarian)

* New translations en.json (Italian)

* New translations en.json (Japanese)

* New translations en.json (Dutch)

* New translations en.json (Norwegian)

* New translations en.json (Polish)

* New translations en.json (Portuguese)

* New translations InfoPlist.strings (Portuguese)

* New translations description.txt (Portuguese)

* New translations keywords.txt (Portuguese)

* New translations en.json (Russian)

* New translations en.json (Swedish)

* New translations en.json (Turkish)

* New translations en.json (Ukrainian)

* New translations en.json (Chinese Simplified)

* New translations en.json (Chinese Traditional)

* New translations en.json (Vietnamese)

* New translations en.json (Portuguese, Brazilian)

* New translations en.json (Indonesian)

* New translations en.json (Spanish, Mexico)

* New translations InfoPlist.strings (Spanish, Mexico)

* New translations en.json (Croatian)

* New translations en.json (Kazakh)

* New translations en.json (Hindi)

* New translations en.json (English, United States)

* New translations en.json (Sinhala)

* New translations en.json (Kannada)

* New translations en.json (Spanish)

* New translations en.json (Romanian)

* New translations en.json (Portuguese, Brazilian)

* New translations full_de

--- a/translations/es.json
+++ b/translations/es.json
@@ -667,7 +667,7 @@
   },
   "debug": {
     "logs": "Enviar registros vía email",
-    "copy_logs": "Sending an email did not succeed? Then tap here to copy the content of debug logs into clipboard. Then paste it into an email and send to help+seek@inaturalist.org"
+    "copy_logs": "¿No pudo enviar un correo electrónico? Pulse aquí para copiar el contenido de los registros de depuración en el portapapeles. A continuación, péguelo en un correo electrónico y envíelo a help+seek@inaturalist.org"
   },
   "shortcut": {
     "seek_camera": "Cámara de Seek",
@@ -997,5 +997,10 @@
     "thank_you": "¡Gracias por usar Seek! Esperamos que esto te recuerde todas las especies interesantes que has conocido este año.",
     "consider_donation": "Como el pequeño equipo que somos, apreciamos mucho todo el cariño y entusiasmo por Seek. Si quieres apoyarnos a medida que seguimos creciendo, por favor considera hacer una donación a iNaturalist:",
     "donate": "Donar"
+  },
+  "announcements": {
+    "header": "Anuncios de iNaturalist",
+    "announcement": "Anuncio",
+    "dismiss": "Descartar"
   }
 }
