--- a/translations/af.json
+++ b/translations/af.json
@@ -997,5 +997,10 @@
     "thank_you": "Thank you for using Seek! We hope that this reminds you of all the interesting species you met this year.",
     "consider_donation": "As a small team, we greatly appreciate all your love and enthusiasm for Seek. If you’d like to support us as we grow, please consider donating to iNaturalist:",
     "donate": "Donate"
+  },
+  "announcements": {
+    "header": "iNaturalist Announcements",
+    "announcement": "Announcement",
+    "dismiss": "Dismiss"
   }
 }
