--- a/translations/pt-BR.json
+++ b/translations/pt-BR.json
@@ -208,10 +208,10 @@
     "badge_name_april": "Emblema de conectividade",
     "badge_name_may": "Emblema de Biodiversidade",
     "badge_name_june": "Emblema da Comunidade",
-    "badge_name_august": "Emblema de Campo",
-    "badge_name_september": "Emblema da Água Doce",
-    "badge_name_october": "Emblema do Mar Alto",
-    "badge_name_november": "Emblema da Floresta",
+    "badge_name_august": "Insígnia de Campo",
+    "badge_name_september": "Insígnia de Água Doce",
+    "badge_name_october": "Insígnia de Alto Mar",
+    "badge_name_november": "Insígnia de Floresta",
     "badge_name_december": "Emblema climático",
     "op": "Nosso Planeta",
     "start_now": "Iniciar agora",
@@ -997,5 +997,10 @@
     "thank_you": "Obrigado por utilizar o Seek! Esperamos que isto o lembre de todas as espécies interessantes que conheceu este ano.",
     "consider_donation": "Como uma pequena equipe, nós apreciamos muito todo o seu amor e entusiasmo pelo Seek. Se desejar apoiar-nos enquanto crescemos, considere fazer uma doação para o iNaturalist:",
     "donate": "Doar"
+  },
+  "announcements": {
+    "header": "iNaturalist Announcements",
+    "announcement": "Announcement",
+    "dismiss": "Dismiss"
   }
 }
